<resources>
    <string name="app_name">Capacidad</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="login">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="title_activity_nueva_tarea">NuevaTarea</string>
    <string name="title_activity_tarea_elegir_imagen1">TareaElegirImagen1Activity</string>
    <string name="title_activity_menu_inicio">MenuInicio</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_pacientes">Pacientes</string>
    <string name="title_activity_terapia">Terapia</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btnSubmit">RESOLVER</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="menu_inicio">Inicio</string>
    <string name="menu_terapias">Pacientes</string>
    <string name="menu_calendario">Calendario</string>
    <string name="menu_sitios_interes">Sitios de interés</string>
    <string name="menu_mi_perfil">Mi perfil</string>
</resources>
