<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_inicio"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_inicio" />
        <item
            android:id="@+id/menu_terapias"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_terapias" />
        <item
            android:id="@+id/menu_calendario"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_calendario" />
        <item
            android:id="@+id/menu_sitios_interes"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_sitios_interes" />
        <item
            android:id="@+id/menu_mi_perfil"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_mi_perfil" />
    </group>

</menu>
